--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,133 @@
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.display{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.top-display{
+    display: flex;
+    height: 90vh;
+}
+
+.bottom-display{
+    /* display:flex ; */
+    height: 10vh;
+}
+
+
+
+
+header{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+    background-color: black;
+    padding: 20px;
+    color: #6d6d6d;
+    /* max-width: 20vw;
+    height:90vh; */
+}
+
+.menu{
+    /* height: calc(90vh / 3 - (65 / 3)); */
+    justify-content: flex-end;
+
+}
+
+ .menu i{
+    font-size: xx-large;
+
+}
+
+.menu ul{
+    list-style-type: none; 
+    
+}
+.menu h3{
+    color: white;
+    padding: 10px 0;
+}
+
+
+
+.menu li{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding-top: 8px;
+}
+
+
+header>div{
+    height:80vh;
+    display: flex;
+    flex-direction: column;
+    
+
+} 
+
+
+/* player bar*/
+
+.player-bar{
+    height: 10vh;
+    background-color: #282828;
+    display: flex;
+    justify-content: space-between;
+}
+
+.player-center,.player-left,.player-right{
+    /* test */
+    background-color: aquamarine;
+    width: 100px;
+    height: 50px;
+    
+}
+
+/* page */
+
+main{
+    display: flex;
+    flex-direction: column;
+    width: 89vw;
+    height: 90vh;
+    background-color: red;
+}
+
+.top-main{
+    width: 100%;
+    height: 50px;
+    background-color: #080b12;
+}
+
+.nav-main ul{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    list-style-type: none; 
+}
+
+.row{
+    display: flex;
+    gap: 20px;
+
+    padding: 20px;
+}
+
+.card{
+    width: calc(100% / 6 - (20px / 5));
+    height: 100px;
+    background-color: aquamarine;
+}
