--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ main{
     width: 100%;
     
     background-color: #080b12;
-    padding: 20px;
+    padding: 20px 55px;
     display: flex;
     justify-content: end;
 }
@@ -125,7 +125,7 @@ main{
     border-color: white;
     color: white;
     border-radius: 25px;
-    padding: 6px 35px;
+    padding: 6px 30px;
     background-color:#28282800;
 }
 
@@ -155,11 +155,12 @@ main>h2,main>p{
 .card{
     width: calc(100% / 6 - (20px / 5));
     text-align: center;
-   
+    
     
 }
 .card img{
     width: 100%;
+    
  
 }
 
@@ -218,7 +219,7 @@ p,h5{
     gap: 30px;
     align-items: center;
     justify-content: center;
-    font-size: x-large;
+    font-size: large;
 }
 
 .play-bar {
@@ -226,19 +227,29 @@ p,h5{
     flex-direction: row;
     align-items: center;
     gap: 10px;
+    border-radius: 2px;
 }
 
 .bar{
     width: 100%;
     height: 4px;
+    border-radius: 2px;
     background-color: #6d6d6d;
 }
 
 .play-bar .bar .tim-line{
+
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    border-radius: 2px;
     width: 30%;
     height: 100%;
     background-color: white;
 }
+
+
 
 .player-right{
     display: flex;
@@ -246,14 +257,86 @@ p,h5{
     justify-content: start;
     align-items: center;
     gap: 14px;
-    width: 200px;
+    min-width: 180px;
     padding: 10px;
 }
 
 .player-right .tim-line{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    border-radius: 2px;
     width: 30%;
     height: 100%;
     background-color: white;
+}
+
+.fa-circle-play{
+    font-size: x-large;
+}
+
+
+.play-hover .fa-regular.fa-circle-play{
+    
+    font-size: 3rem;
+    position: absolute;
+    transform: translate(-50% ,-50%);
+    display: none;
+
+}
+
+.card-img{
+    position: relative;
+}
+
+.play-hover{
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+}
+
+.cursor{
+    display: none;
+    padding: 5px;
+    border-radius: 50%;
+    background-color: white;
+}
+
+/* hover */
+
+.menu li:hover,.menu span:hover{
+    color: white;
+}
+
+.nav-main li:hover{
+    color: white;
+}
+
+.btn-primary:hover{
+    transform: scale(1.4);
+
+}
+
+.card img:hover {
+    opacity:30% ;
+    
+}
+.card:hover .fa-regular.fa-circle-play{
+    display: block;
+
+}
+
+.fa-circle-play:hover{
+    transform: scale(1.0);
+}
+
+.bar .tim-line:hover{
+    background-color: greenyellow;
+}
+
+.bar .tim-line:hover .cursor{
+    display: flex;
 }
 
 /* responsive */
