--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ html{
 }
 
 /* screen */
+
 .display{
     width: 100vw;
     height: 100vh;
@@ -47,7 +48,7 @@ header{
     display: none;
 }
 
-.logo>img{
+.logo{
     width: 125px;
     padding-bottom: 20px;
 }
@@ -55,7 +56,6 @@ header{
 .menu{
     
     justify-content: flex-end;
-    
 }
 
 .menu ul li img{
@@ -80,6 +80,7 @@ header{
     list-style-type: none; 
     
 }
+
 .menu h3{
     color: white;
     padding: 10px 0;
@@ -92,14 +93,12 @@ header{
     padding-top: 8px;
 }
 
-
 header>div{
     height:100%;
     display: flex;
     flex-direction: column;
     
 } 
-
 
 /* main */
 
@@ -113,20 +112,29 @@ main{
 }
 
 .top-main{
-    width: 100%;
-    
-    background-color: #080b12;
-    padding: 20px 55px;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
+    align-items: center;
+    width: 90%;
+    height: 10%;
+    background-color: black;
+    opacity: 0.8;
+    position: fixed;
+    z-index: 3;
+    top: 0;
 }
 
 .btn-primary{
+    margin-right: 180px;
     border-color: white;
     color: white;
     border-radius: 25px;
     padding: 6px 30px;
     background-color:#28282800;
+}
+
+.nav-main{
+    margin-top: 100px;
 }
 
 .nav-main ul{
@@ -191,7 +199,6 @@ p,h5{
     color: #6d6d6d;
 }
 
-
 /* player bar  footer*/
 
 .player-bar{
@@ -199,6 +206,7 @@ p,h5{
     background-color: #282828;
     display: flex;
     justify-content: space-between;
+    
 }
 
 .player-center,.player-left,.player-right{    
@@ -300,8 +308,6 @@ p,h5{
     background-color: white;
 }
 
-
-
 .cursor{
     display: none;
     padding: 5px;
@@ -309,8 +315,40 @@ p,h5{
     background-color: white;
 }
 
-/* hover */
 
+/* acctive */
+
+.nav-main ul li{
+    position: relative;
+}
+
+.nav-main ul li:active::after{
+    content: "";
+    position: absolute;
+    bottom: -6px;
+    left: 50%;
+    height: 3px;
+    width: 30px;
+    background-color: greenyellow;
+    transform: translateX(-50%)
+}
+
+.menu ul li {
+    position: relative;
+}
+
+.menu ul li:active:before{
+    content: "";
+    position: absolute;
+    
+    left: -11%;
+    height: 25px;
+    width: 3px;
+    background-color: greenyellow;
+    transform: translateX(-50%)
+}
+
+/* hover */
 
 .menu li:hover,.menu span:hover{
     color: white;
@@ -362,7 +400,6 @@ p,h5{
 @media screen and (max-width:992px) {
 
 
-
     .nav-main ul{
         flex-wrap: wrap;
     }
@@ -378,6 +415,7 @@ p,h5{
 }
 
 @media screen and (max-width:768px){
+    
     .card{
         width: calc(100% / 2 - (20px / 2))
     }
@@ -436,5 +474,6 @@ p,h5{
 
     .player-center .icon {
         gap: 15px;
+        font-size: medium;
     }
 }
